<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <!-- 스타일로 폰트 굵기를 설정했는데 왜 볼드스타일 + 텍스트스타일 볼드를 써야만 적용되는거지? -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_info_title"
            android:textSize="15sp"
            android:textColor="#000000"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/field_name"
            android:layout_width="314dp"
            android:layout_height="38dp"
            android:background="@drawable/rounded_border_field"
            android:paddingHorizontal="15dp"
            android:hint="@string/user_info_name_hint"
            android:textSize="13sp"
            android:textColor="#FF828282"
            android:gravity="center_vertical"
            android:inputType="textPersonName"/>

        <LinearLayout
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/field_age"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_border_field"
                android:hint="@string/user_info_age_hint"
                android:textSize="13sp"
                android:textColor="#FF828282"
                android:inputType="number"
                android:paddingHorizontal="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_age_unit"
                android:textSize="13sp"
                android:textColor="#FF000000"
                android:layout_marginHorizontal="5dp"/>

            <Spinner
                android:id="@+id/select_job"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1.2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/field_height"
                android:layout_width="250dp"
                android:layout_height="38dp"
                android:background="@drawable/rounded_border_field"
                android:hint="@string/user_info_height_hint"
                android:textSize="13sp"
                android:textColor="#FF828282"
                android:inputType="numberDecimal"
                android:paddingHorizontal="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cm"
                android:textSize="13sp"
                android:textColor="#FF000000"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/field_weight"
                android:layout_width="250dp"
                android:layout_height="38dp"
                android:background="@drawable/rounded_border_field"
                android:paddingHorizontal="10dp"
                android:hint="@string/user_info_weight_hint"
                android:textSize="13sp"
                android:textColor="#FF828282"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kg"
                android:textSize="13sp"
                android:textColor="#000000"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp">
            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:background="#FFE6E6E6"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_info_gender_label"
                android:textSize="13sp"
                android:textColor="#FF828282"
                android:layout_marginHorizontal="10dp"/>
            <View
                android:layout_width="130dp"
                android:layout_height="1dp"
                android:background="#FFE6E6E6"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_woman"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_color"
                android:text="@string/user_info_gender_female"
                android:textColor="#FF000000"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_man"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_color"
                android:text="@string/user_info_gender_male"
                android:textColor="#FF000000"
                android:textSize="13sp" />
        </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_other"
        android:layout_width="314dp"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_rounded_color"
        android:text="@string/user_info_gender_other"
        android:textColor="#000000"
        android:textSize="13sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"
        android:layout_width="314dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_rounded_button_continue"
        android:text="@string/common_continue"
        android:textColor="#FFFFFFFF"
        android:textSize="13sp"
        android:textStyle="bold" />
    </LinearLayout>