<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <!--  Frame: Main (360x780)  -->

    <!-- 상단 날씨 박스 -->
    <LinearLayout
        android:id="@+id/linearLayout_weather_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="33dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_border"
        android:orientation="vertical"
        android:padding="24dp">
        <!--  TEXT: Text Heading  -->
        <TextView
            android:id="@+id/heading_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/pretendard_variable"
            android:text="@string/main_temperature"
            android:textColor="#1B1B1B"
            android:textSize="24sp"
            app:fontVariationSettings="'wght' 700" />

        <!--  FRAME: Avatar Block  -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CECECE" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <!--  RECTANGLE: 날씨 이미지  -->
            <ImageView
                android:id="@+id/weather_image"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:importantForAccessibility="no"
                android:src="@drawable/weather_sunny" />

            <!--  FRAME: 날씨 상세 정보  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">
                <!--  TEXT: 날씨 총평  -->
                <TextView
                    android:id="@+id/weather_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_variable"
                    android:text="@string/main_weather"
                    android:textColor="#767676"
                    android:textSize="20sp"
                    app:fontVariationSettings="'wght' 700" />
                <!--  TEXT: 강수 확률, 풍속  -->
                <TextView
                    android:id="@+id/weather_rain_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_rain_wind"
                    android:textColor="#BCBCBC"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- 오늘의 코디 추천 -->
    <TextView
        android:id="@+id/text_today_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout_codi_preview"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/pretendard_variable"
        android:text="@string/main_today_title"
        android:textColor="#000000"
        android:textSize="23sp"
        app:fontVariationSettings="'wght' 700" />

    <!-- 코디 프리뷰 -->
    <LinearLayout
        android:id="@+id/linearLayout_codi_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/chevron_left"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:src="@drawable/chevron_left" />

        <ImageView
            android:id="@+id/generated_codi_image"
            android:layout_width="0dp"
            android:layout_height="360dp"
            android:layout_weight="1"
            android:importantForAccessibility="no" />

        <ImageButton
            android:id="@+id/chevron_right"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:importantForAccessibility="no"
            android:src="@drawable/chevron_right" />
    </LinearLayout>

    <!-- 버튼 그룹 (입어보기, 상황 더하기, 나의 옷장) -->
    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <!-- 입어보기, 상황 더하기 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <!-- 입어보기 -->
            <LinearLayout
                android:id="@+id/button_try"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_rounded_color"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">
                    <!--  INSTANCE: Instagram  -->
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/instagram" />
                    <!--  TEXT: 입어보기  -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_try"
                    android:textSize="13sp" />
            </LinearLayout>

            <!-- 상황 더하기 -->
            <LinearLayout
                android:id="@+id/button_addcontext"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_rounded_color"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">
                <!--  INSTANCE: Plus square  -->
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/plus" />
                <!--  TEXT: 상황 더하기  -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_addcontext"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <!--나의 옷장-->
        <LinearLayout
                android:id="@+id/button_mycloset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/bg_rounded_color"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/archive" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_mycloset"
                    android:textSize="13sp" />
            </LinearLayout>

    </LinearLayout>

    <!-- 메인 fab (설정 아이콘) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_setting_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/main_setting_button"
        android:src="@drawable/setting_button"
        app:backgroundTint="#FFFFFF"
        app:borderWidth="0dp"
        app:fabSize="normal" />

    <!-- 사용자 정보 수정 fab
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_sub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fab_main"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#ffffff"
        android:src="@drawable/ic_map"
        android:visibility="invisible"
        app:borderWidth="0dp"
        app:fabSize="normal" /> -->

</RelativeLayout>